# Qt-based-VideoPlayer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  absolutesetstyle.h  addvideo.cpp  addvideo.h  database.cpp  database.h  demo.h  library.cpp  library.h  main.cpp  player.cpp  player.cpp.autosave  player.h  player.pro  playercontrols.cpp  playercontrols.cpp.autosave  playercontrols.h  playlistdelegate.cpp  playlistdelegate.h  playlistitem.h  playlistmodel.cpp  playlistmodel.h  playlistmodel.h.autosave  reader.cpp  reader.h  reader.ui  the.pro  the_player.cpp  the_player.h  tomeo.cpp  utils.cpp  utils.h  videogriddelegate.cpp  videogridmodel.cpp  videogridmodel.h  videoitem.cpp  (+4 more)
font/: font.qrc
img/: img.qrc
playlist/: playlistdelegate.cpp  playlistmodel.cpp
